# NativeVoiceCall

./: .gitignore  PROJECT_MODULES.md  analyze_audio_logs.py  analyze_audio_logs.sh  quick_lan_start.sh
android_client/: build.gradle  gradle.properties  settings.gradle
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/cpp/: CMakeLists.txt  android_voice_call.cpp  voice_call_jni.cpp
android_client/app/src/main/java/com/nativevoicecall/android/: MainActivity.java  VoiceCallManager.java
android_client/app/src/main/res/drawable/: ic_launcher_foreground.xml  rounded_background.xml
android_client/app/src/main/res/layout/: activity_main.xml
android_client/app/src/main/res/values/: strings.xml  themes.xml
core/: CMakeLists.txt
core/cmake/: voice_callConfig.cmake.in
core/include/: voice_call.h
core/src/: simple_udp_voice_call.cpp  udp_voice_call.cpp  voice_call.cpp  webrtc_voice_call.cpp
docs/: API_Reference.md  Cross_Machine_Test.md  Implementation_Summary.md  Technical_Details.md  User_Guide.md
linux_client/: CMakeLists.txt
linux_client/src/: main.cpp
server/: README.md  build_and_run.sh  udp_server.cpp
